# renderer-test

./: .gitignore  CMakeLists.txt  main.cpp
dependencies/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Common.cpp  Common.h  Device.cpp  Device.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Transform.cpp  Transform.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.h  Vertex.cpp  Vertex.h
